--- a/.github/workflows/pre-releases.yml
+++ b/.github/workflows/pre-releases.yml
@@ -1,30 +1,21 @@
----
-name: "pre-release"
-
+name: Make pdf for every release
 on:
   push:
-    branches:
-      - "main"
-    tags-ignore:
-      - "*"    
-
+    tags:
+      - release/*
 jobs:
-  pre-release:
-    name: "Pre Release"
-    runs-on: "ubuntu-latest"
-
+  convert_to_pdf:
+    runs-on: ubuntu-20.04
     steps:
-      # ...
-      - name: "Build & test"
+      - name: Check out markdown
+        uses: actions/checkout@v2
+      - name: Create files list
+        id: files_list
         run: |
-          echo "done!"
-
-      - uses: "luckym07/Pr-Review@v3"
-        with:
-          repo_token: "${{ vars.ACCOUNT_GITHUB_TOKEN  }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            LICENSE.txt
-            *.jar
+          mkdir output
+          echo "::set-output name=files::README.md"
+      - name: Get release version
+        id: release_version
+        run: |
+          echo "::set-output name=release_version::$(echo ${{ github.ref }} | cut --delimiter=/ -f4)"
+      
