--- a/.github/workflows/pre-releases.yml
+++ b/.github/workflows/pre-releases.yml
@@ -5,7 +5,7 @@ on:
       - release/*
 jobs:
   convert_to_pdf:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Check out markdown
         uses: actions/checkout@v2
