--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,27 @@
 name: release
-
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'New tag name'
-        required: true
-
+  push:
+    branches:
+      - "!*"
+    tags:
+      - "v*.*.*"
 # ...
 
 jobs:
-  goreleaser:
+  build:
     runs-on: ubuntu-latest
+    name: goreleaser
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - run: git tag ${{ github.event.inputs.tag }}
+    - name: Set up Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+      id: go
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+    - name: goreleaser
+      uses: goreleaser/goreleaser-action@master
+      with:
+        args: release
+      env:
+        GITHUB_TOKEN: ${{ vars.ACCOUNT_GITHUB_TOKEN }}
